changed "new Integer(" to "Integer.valueOf(" as per lint recomendations